# server77

./: README.md
client/: app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json
client/assets/: style.scss
client/layouts/: default.vue
client/pages/: index.vue
client/wasm/: Cargo.toml
client/wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
client/wasm/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
